--- a/opengl01/Makefile
+++ b/opengl01/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 CFLAGS = -lGL -lGLU -lglut
 CFLAGSOSX = -framework GLUT -framework OpenGL -framework Cocoa
 ifeq ($(OS), Darwin)
-  CFLAGS = CFLAGSOSX
+  CFLAGS = $(CFLAGSOSX)
 endif
 opengl_01: opengl_01.c
-	$(CC) -o opengl_01 opengl_01.c $(CFLAGS)%
+	$(CC) -o opengl_01 opengl_01.c $(CFLAGS)
